fix: strench trail image to container size when too small

--- a/src/components/home/trails/trail.module.scss
+++ b/src/components/home/trails/trail.module.scss
@@ -23,3 +23,7 @@
 	font-size: larger;
 	font-weight: $font-bold;
 }
+
+.figure {
+	width: 100%;
+}
